--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "bc-nc-news",
   "main": "index.js",
   "scripts": {
+    "migrate-latest": "knex migrate:latest",
+    "migrate-make": "knex migrate:make",
+    "migrate-rollback": "knex migrate:rollback",
     "setup-dbs": "psql -f ./db/setup.sql",
     "seed": "knex seed:run",
     "test-utils": "mocha spec/utils.spec.js",
-    "test": "mocha spec/app.spec.js"
+    "test": "mocha spec/utils.spec.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +24,13 @@
   },
   "homepage": "https://github.com/northcoders/be-nc-news#readme",
   "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "express": "^4.17.1",
+    "knex": "^0.17.6",
+    "mocha": "^6.1.4",
+    "nodemon": "^1.19.1",
+    "pg": "^7.11.0",
+    "supertest": "^4.0.2"
+  }
 }
