--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "setup-dbs": "psql -f ./db/setup.sql",
     "seed": "knex seed:run",
     "test-utils": "mocha spec/utils.spec.js",
-    "test": "mocha spec/utils.spec.js"
+    "test": "mocha server/spec/server.spec.js"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,9 @@
     "url": "https://github.com/northcoders/be-nc-news/issues"
   },
   "homepage": "https://github.com/northcoders/be-nc-news#readme",
-  "dependencies": {},
+  "dependencies": {
+    "chai-sorted": "^0.2.0"
+  },
   "devDependencies": {
     "chai": "^4.2.0",
     "express": "^4.17.1",
