--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "setup-dbs": "psql -f ./db/setup.sql",
     "seed": "knex seed:run",
     "test-utils": "mocha spec/utils.spec.js",
-    "test": "mocha server/spec/server.spec.js"
+    "test": "mocha server/spec/server.spec.js",
+    "seed:prod": "NODE_ENV=production DB_URL=$(heroku config:get postgres://uqwvjlnifxhewa:d610423b68110f9623a095f1b8b8a5a354b690d9ed75535d0b9139ed9901846c@ec2-54-235-92-43.compute-1.amazonaws.com:5432/d8shtp99qi4f06) knex seed:run",
+    "migrate:latest:prod": "NODE_ENV=production DB_URL=$(heroku config:get postgres://uqwvjlnifxhewa:d610423b68110f9623a095f1b8b8a5a354b690d9ed75535d0b9139ed9901846c@ec2-54-235-92-43.compute-1.amazonaws.com:5432/d8shtp99qi4f06) knex migrate:latest",
+    "migrate:rollback:prod": "NODE_ENV=production DB_URL=$(heroku config:get postgres://uqwvjlnifxhewa:d610423b68110f9623a095f1b8b8a5a354b690d9ed75535d0b9139ed9901846c@ec2-54-235-92-43.compute-1.amazonaws.com:5432/d8shtp99qi4f06) knex migrate:rollback",
+    "start": "node ./server/listen/index.js"
   },
   "repository": {
     "type": "git",
