--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
   "homepage": "https://github.com/northcoders/be-nc-news#readme",
   "dependencies": {
     "chai-sorted": "^0.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "knex": "^0.17.6"
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "knex": "^0.17.6",
     "mocha": "^6.1.4",
     "nodemon": "^1.19.1",
     "pg": "^7.11.0",
