--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/northcoders/be-nc-news#readme",
   "dependencies": {
     "chai-sorted": "^0.2.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.17.6",
     "pg": "^7.11.0"
